[package]
name = "sflowrt-rs-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
fnv = "1.0.7"
nom = "*"
phf = { version = "0.11.2", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
rstest = "0.23.0"
strum = { version = "0.26.3", features = ["derive"] }
